<?xml version="1.0" encoding="utf-8"?>
<com.go.driver.wiget.ArcView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_collapseMode="parallax"
    app:shape_arc_cropDirection="outside"
    app:shape_arc_height="@dimen/_12sdp"
    app:shape_arc_position="top"
    android:background="@android:color/transparent"
    tools:context=".fragment.ReportDoneFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dialog_Bg"
        android:paddingTop="@dimen/padding_XX_Large"
        android:paddingStart="@dimen/padding_X_Large"
        android:paddingEnd="@dimen/padding_X_Large"
        android:paddingBottom="@dimen/padding_X_Large"
        android:gravity="center"
        tools:ignore="DisableBaselineAlignment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_X_Large"
            android:drawableEnd="@drawable/ic_report_done"
            android:drawablePadding="@dimen/padding_XX_Large"
            android:text="@string/thanksForReport"
            android:textSize="@dimen/text_Size_X_Large"
            android:textColor="@color/font_Color_Dark"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_XX_Large"
            android:text="@string/feedbackMessage"
            android:lineSpacingExtra="@dimen/text_Spacing"
            android:textSize="@dimen/text_Size_Small"
            android:textColor="@color/font_Color_Gray"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_enable"
            android:text="@string/done"
            android:textSize="@dimen/text_Size_Small"
            android:textColor="@color/font_Color_Light"
            android:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.go.driver.wiget.ArcView>