<?xml version="1.0" encoding="utf-8"?>
<com.go.driver.wiget.ArcView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_collapseMode="parallax"
    app:shape_arc_cropDirection="outside"
    app:shape_arc_height="@dimen/_12sdp"
    app:shape_arc_position="top"
    android:background="@android:color/transparent"
    tools:context=".fragment.AlertDialogFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/dialog_Bg"
        android:paddingTop="@dimen/padding_XX_Large"
        android:paddingStart="@dimen/padding_X_Large"
        android:paddingEnd="@dimen/padding_X_Large"
        android:paddingBottom="@dimen/padding_Medium"
        tools:ignore="DisableBaselineAlignment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_Medium"
            tools:text="@string/permissions"
            android:textSize="@dimen/text_Size_Medium"
            android:textStyle="bold"
            android:textColor="@color/font_Color_Dark"
            tools:visibility="visible"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_Small"
            android:layout_marginBottom="@dimen/margin_Small"
            tools:text="@string/allowNotificationMessage"
            android:textSize="@dimen/text_Size_Small"
            android:textColor="@color/font_Color_Dark"
            tools:visibility="visible"
            android:visibility="gone"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_Medium"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/leftBtn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                tools:text="@string/forbid"
                android:textSize="@dimen/text_Size_Small"
                android:textColor="@color/font_Color_Green"
                android:textAllCaps="false"
                tools:visibility="visible"
                android:visibility="gone"/>

            <View
                android:id="@+id/divider"
                android:layout_width="@dimen/border_Small"
                android:layout_height="@dimen/_32sdp"
                android:background="@color/colorSmokeWhite"
                tools:visibility="visible"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rightBtn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                tools:text="@string/allow"
                android:textSize="@dimen/text_Size_Small"
                android:textColor="@color/font_Color_Green"
                android:textAllCaps="false"
                tools:visibility="visible"
                android:visibility="gone"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.go.driver.wiget.ArcView>