<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_Bg"
    tools:context=".activity.SignInActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_weight="2"
        android:transitionName="BikeIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/icon_top"
        android:layout_marginEnd="@dimen/_minus20sdp"
        android:scaleType="fitXY" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:padding="@dimen/padding_XX_Large"
        android:layout_height="0dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_Large"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                style="@style/TitleTvStyle"
                android:text="@string/signIn"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/HintTvStyle"
                    android:text="@string/phoneNumber"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_X_Small"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="wrap_content"
                        style="@style/InputFieldStyle"
                        android:text="@string/countryCode"
                        android:enabled="false"
                        android:paddingEnd="@dimen/padding_Small"
                        android:layout_marginEnd="@dimen/margin_Small"
                        android:textSize="@dimen/text_Size_Medium"
                        tools:ignore="RtlSymmetry" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/phoneInput"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        style="@style/InputFieldStyle"
                        android:textSize="@dimen/text_Size_Medium"
                        android:hint="@string/phone_Hint"
                        android:maxLength="11"
                        android:inputType="numberPassword"
                        android:digits="0123456789"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/signInBtn"
                android:layout_width="@dimen/icon_Size_XX_Large"
                android:layout_height="@dimen/icon_Size_XX_Large"
                android:padding="@dimen/padding_X_Large"
                android:layout_margin="@dimen/margin_X_Small"
                android:layout_gravity="bottom|end"
                android:background="@drawable/shape_round"
                app:srcCompat="@drawable/ic_arrow_right"
                android:elevation="@dimen/card_Elevation_Small"/>

        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>